Update text, and position of certain elements.
Might add Disqus later, I don't know.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,15 +9,21 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Literally nobody (yes, as opposed to figuratively nobody) asked me to create this site, but I did. It hosts Hacknet Extensions in a place other than the Workshop, or Nexus Mods. More specifically, it hosts them on GitHub.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>This is completely legal, as I'm getting the files using Valve's SteamCMD, and moreover Hacknet's developer, Matt Trobbiani, has (thankfully) allowed anonymous workshop downloads for people that use the GOG/Itch/? versions. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+					<p>
+						<br>
+						If I receive a request from Matt to take the site down, I will comply.
+						<br>
+						If you do not want to use my site, you can use the following guide:
+						<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1310008131" class="btn btn-lg btn-outline">
+							<i class="fa fa-info-circle"></i> Downloading Steam Workshop Mods
+						</a>
+					</p>
                 </div>
             </div>
         </div>
