--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -20,20 +20,20 @@
                             {% endif %}
                             <ul class="list-inline item-details">
                                 {% if post.client %}
-                                    <li>Client:
-                                        <strong><a href="http://startbootstrap.com">{{ post.client }}</a>
+                                    <li>Developer:
+                                        <strong><a href="{{ post.devurl }}">{{ post.profile }}</a>
                                         </strong>
                                     </li>
                                 {% endif %}
                                 {% if post.project-date %}
-                                    <li>Date:
-                                        <strong><a href="http://startbootstrap.com">{{ post.project-date }}</a>
+                                    <li>Last Update:
+                                        <strong><a href="#">{{ post.project-date }}</a>
                                         </strong>
                                     </li>
                                 {% endif %}
                                 {% if post.category %}
-                                    <li>Service:
-                                        <strong><a href="http://startbootstrap.com">{{ post.category }}</a>
+                                    <li>Requires:
+                                        <strong><a href="{{ post.requiresurl }}">{{ post.requires }}</a>
                                         </strong>
                                     </li>
                                 {% endif %}
