--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -19,7 +19,7 @@
                                 <p>{{ post.description }}</p>
                             {% endif %}
                             <ul class="list-inline item-details">
-                                {% if post.client %}
+                                {% if post.profile %}
                                     <li>Developer:
                                         <strong><a href="{{ post.devurl }}">{{ post.profile }}</a>
                                         </strong>
@@ -31,7 +31,7 @@
                                         </strong>
                                     </li>
                                 {% endif %}
-                                {% if post.category %}
+                                {% if post.requires %}
                                     <li>Requires:
                                         <strong><a href="{{ post.requiresurl }}">{{ post.requires }}</a>
                                         </strong>
