--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -18,6 +18,13 @@
                             {% if post.description %}
                                 <p>{{ post.description }}</p>
                             {% endif %}
+                            {% if post.download %}
+								<p>
+									<a href="{{ post.download }}" class="btn btn-lg btn-outline btn-dark">
+										<i class="fa fa-download"></i> Download
+									</a>
+								</p>
+                            {% endif %}
                             <ul class="list-inline item-details">
                                 {% if post.profile %}
                                     <li>Developer:
